@@ -1,192 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
-    
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:id="@+id/selectprotocol_Root"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:orientation="vertical" >
-	
-	    <RadioGroup
-	        android:id="@+id/selectprotocol_radioGroupProtocolVersion"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal" >
-	
-	        <RadioButton
-	            android:id="@+id/selectprotocol_radioV1"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:checked="true"
-	            android:text="Protocol v1" />
-	
-	        <RadioButton
-	            android:id="@+id/selectprotocol_radioV2"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="Protocol v2" />
-	    </RadioGroup>
-	
-	    <CheckBox
-	        android:id="@+id/selectprotocol_checkMedia"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:checked="true"
-	        android:text="Media" />
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <TextView
-	            android:id="@+id/TextView01"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_marginLeft="5dp"
-	            android:layout_marginRight="5dp"
-	            android:text="App name:"
-	            android:textAppearance="?android:attr/textAppearanceMedium" />
-	
-	        <EditText
-	            android:id="@+id/selectprotocol_appName"
-	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
-	            android:layout_marginRight="5dp"
-	            android:layout_weight="1"
-	            android:ems="10"
-	            android:inputType="textCapSentences"
-	            android:maxLength="25"
-	            android:text="SyncProxyTester" >
-	        </EditText>
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <LinearLayout
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="1"
-	            android:orientation="vertical" >
-	
-	            <TextView
-	                android:id="@+id/textView2"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_marginLeft="5dp"
-	                android:text="Language:"
-	                android:textAppearance="?android:attr/textAppearanceMedium" />
-	
-	            <Spinner
-	                android:id="@+id/selectprotocol_lang"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content" />
-	        </LinearLayout>
-	
-	        <LinearLayout
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="1"
-	            android:orientation="vertical" >
-	
-	            <TextView
-	                android:id="@+id/textView3"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_marginLeft="5dp"
-	                android:text="HMI language:"
-	                android:textAppearance="?android:attr/textAppearanceMedium" />
-	
-	            <Spinner
-	                android:id="@+id/selectprotocol_hmiLang"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content" />
-	
-	        </LinearLayout>
-	
-	    </LinearLayout>
-	
-	    <RadioGroup
-	        android:id="@+id/selectprotocol_radioGroupTransport"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal" >
-	
-	        <RadioButton
-	            android:id="@+id/selectprotocol_radioWiFi"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="WiFi" />
-	
-	        <RadioButton
-	            android:id="@+id/selectprotocol_radioBT"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:checked="true"
-	            android:text="Bluetooth" />
-	    </RadioGroup>
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <TextView
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_marginLeft="5dp"
-	            android:layout_marginRight="5dp"
-	            android:text="IP address:"
-	            android:textAppearance="?android:attr/textAppearanceMedium" />
-	
-	        <EditText
-	            android:id="@+id/selectprotocol_ipAddr"
-	            android:layout_width="0dp"
-	            android:layout_height="wrap_content"
-	            android:layout_marginRight="5dp"
-	            android:layout_weight="1"
-	            android:ems="10"
-	            android:inputType="text"
-	            android:maxLength="15"
-	            android:text="10.10.0.1" />
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <TextView
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_marginLeft="5dp"
-	            android:layout_marginRight="5dp"
-	            android:text="Port:"
-	            android:textAppearance="?android:attr/textAppearanceMedium" />
-	
-	        <EditText
-	            android:id="@+id/selectprotocol_tcpPort"
-	            android:layout_width="0dp"
-	            android:layout_height="wrap_content"
-	            android:layout_marginRight="5dp"
-	            android:layout_weight="1"
-	            android:ems="10"
-	            android:inputType="number"
-	            android:maxLength="5"
-	            android:text="12345" />
-	
-	    </LinearLayout>
-	
-	    <CheckBox
-	        android:id="@+id/selectprotocol_checkAutoReconnect"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:checked="true"
-	        android:text="Auto reconnect" />
-	
-	</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/selectprotocol_Root"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <RadioGroup
+            android:id="@+id/selectprotocol_radioGroupProtocolVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/selectprotocol_radioV1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/selectprotocol_protocolV1" />
+
+            <RadioButton
+                android:id="@+id/selectprotocol_radioV2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/selectprotocol_protocolV2" />
+        </RadioGroup>
+
+        <CheckBox
+            android:id="@+id/selectprotocol_checkMedia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/selectprotocol_media" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/selectprotocol_appName"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <EditText
+                android:id="@+id/selectprotocol_appName"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textCapSentences"
+                android:maxLength="25"
+                android:text="@string/selectprotocol_appNameDefault" >
+            </EditText>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="@string/selectprotocol_lang"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <Spinner
+                    android:id="@+id/selectprotocol_lang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="@string/selectprotocol_hmiLang"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <Spinner
+                    android:id="@+id/selectprotocol_hmiLang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <RadioGroup
+            android:id="@+id/selectprotocol_radioGroupTransport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/selectprotocol_radioWiFi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/selectprotocol_wifi" />
+
+            <RadioButton
+                android:id="@+id/selectprotocol_radioBT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/selectprotocol_bluetooth" />
+        </RadioGroup>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/selectprotocol_ipAddress"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <EditText
+                android:id="@+id/selectprotocol_ipAddr"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:maxLength="15"
+                android:text="@string/selectprotocol_ipAddressDefault" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/selectprotocol_tcpPort"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <EditText
+                android:id="@+id/selectprotocol_tcpPort"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number"
+                android:maxLength="5"
+                android:text="@string/selectprotocol_tcpPortDefault" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/selectprotocol_checkAutoReconnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/selectprotocol_autoReconnect" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/selectprotocol_extraOptions"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <CheckBox
+            android:id="@+id/selectprotocol_checkAutoSetAppIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/selectprotocol_autoSetAppIcon" />
+
+        </LinearLayout>
+
 </ScrollView>
