@@ -61,5 +61,21 @@
     <string name="show_softButtons">Soft Buttons</string>
     <string name="show_customPresets">Custom Presets (comma-separated)</string>
     <string name="show_customPresetsDefault">GEN0,GEN1,GEN2,GEN3,GEN4,GEN5</string>
+    <string name="selectprotocol_protocolV1">Protocol v1</string>
+    <string name="selectprotocol_protocolV2">Protocol v2</string>
+    <string name="selectprotocol_media">Media</string>
+    <string name="selectprotocol_appName">App name:</string>
+    <string name="selectprotocol_appNameDefault">SyncProxyTester</string>
+    <string name="selectprotocol_lang">Language:</string>
+    <string name="selectprotocol_hmiLang">HMI language:</string>
+    <string name="selectprotocol_wifi">WiFi</string>
+    <string name="selectprotocol_bluetooth">Bluetooth</string>
+    <string name="selectprotocol_ipAddress">IP address:</string>
+    <string name="selectprotocol_ipAddressDefault">10.10.0.1</string>
+    <string name="selectprotocol_tcpPort">Port:</string>
+    <string name="selectprotocol_tcpPortDefault">12345</string>
+    <string name="selectprotocol_autoReconnect">Auto reconnect</string>
+    <string name="selectprotocol_extraOptions">Extra Options</string>
+    <string name="selectprotocol_autoSetAppIcon">Set app icon after registration</string>
 
 </resources>
